# Optimized_Matrix_Algorithms

./: .gitignore  CMakeLists.txt  DotProductFunctions.hpp  Matrix.hpp  README.md  a.out  main.cpp  matrix.cpp
a.out.dSYM/Contents/Resources/Relocations/aarch64/: a.out.yml
scripts/: configure.sh  run.sh
src/: DotProduct.cpp  DotProduct.hpp  DotProductFunctions.hpp  Matrix.cpp  Matrix.hpp
test/: Test.cpp  Test.hpp
